--- a/Kubectl/Kubectl/appsettings.json
+++ b/Kubectl/Kubectl/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Dockerize;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=sqldata;Initial Catalog=Kubectl;User ID=SA;Password=Password"
   },
   "Logging": {
     "LogLevel": {
