Alteração de diretório e modelo de projeto

--- a/Src/Kubectl/Kubectl/Properties/launchSettings.json
+++ b/Src/Kubectl/Kubectl/Properties/launchSettings.json
@@ -1,10 +1,10 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:56064",
+      "applicationUrl": "http://localhost:51124",
       "sslPort": 0
     }
   },
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/card",
+      "launchUrl": "api/character",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "Kubectl": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/card",
+      "launchUrl": "api/character",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
