--- a/Src/Kubectl/api-kubectl-deployment.yaml
+++ b/Src/Kubectl/api-kubectl-deployment.yaml
@@ -1,25 +1,28 @@
+# Deployment
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    run: api-kubectl
+    app: api-kubectl
   name: api-kubectl
 spec:
-  replicas: 4
+  replicas: 2
   selector:
     matchLabels:
-      run: api-kubectl
+      app: api-kubectl
+  strategy: {}
   template:
     metadata:
       labels:
-        run: api-kubectl
+        app: api-kubectl
     spec:
       containers:
       - image: api-kubectl:v1
         name: api-kubectl
-        ports:
-        - containerPort: 80
+        resources: {}
+status: {}
 ---
+# Service
 apiVersion: v1
 kind: Service
 metadata:
@@ -31,6 +34,9 @@ spec:
   - port: 80
     protocol: TCP
     targetPort: 80
+    nodePort: 31412
   selector:
     app: api-kubectl
   type: NodePort
+status:
+  loadBalancer: {}
